task was implemented

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,498 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+  id="home"
+>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="icon"
+      type="x-icon"
+      href="./images/favicon.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Inter:wght@400;500&family=Poppins:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Inter:wght@400;500&family=Montserrat:wght@400;700&family=Poppins:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    >
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__section">
+      <div class="header__content">
+        <div class="header__background">
+          <a href="#home" class="header__logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+
+        <a href="#menu" class="header__icon"></a>
+
+        <div class="header__name">
+          <div class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </div>
+
+          <div class="header__tickets">
+            <a href="#events" class="header__buy">
+              квитки
+            </a>
+            <a href="#" class="header__buy-link"></a>
+          </div>
+
+          <a href="#events" class="header__events">
+            події
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <div class="main">
+      <section class="menu page__menu" id="menu">
+        <div class="menu__content">
+          <div class="menu__items">
+            <a href="#home" class="menu__icon">
+            </a>
+
+            <li class="menu__list">
+              <ul class="menu__list-item">
+                <a href="#gallery" class="menu__link">
+                  Галерея
+                </a>
+              </ul>
+              <ul class="menu__list-item">
+                <a href="#events" class="menu__link">
+                  Виставки та події
+                </a>
+              </ul>
+            </li>
+
+            <li class="menu__list">
+              <ul class="menu__list-item">
+                <a href="#about" class="menu__link">
+                  Про нас
+                </a>
+              </ul>
+              <ul class="menu__list-item">
+                <a href="#contacts" class="menu__link">
+                  Контакти
+                </a>
+              </ul>
+            </li>
+          </div>
+
+          <div class="menu__schedule">
+            <div class="menu__weekdays">
+              <p class="menu__title">
+                Графік роботи
+              </p>
+              <p class="menu__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  середа
+                </span>
+              </p>
+              <p class="menu__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  четвер
+                </span>
+              </p>
+              <p class="menu__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  п'ятниця
+                </span>
+              </p>
+              <p class="menu__weekdays--time">
+                11:00 — 19:00
+                <span class= "menu__weekdays--day">
+                  субота
+                </span>
+              </p>
+              <p class="menu__weekdays--time">
+                11:00 — 19:00
+                <span class= "menu__weekdays--day">
+                  неділя
+                </span>
+              </p>
+            </div>
+
+            <div class="menu__weekends">
+              <p class="menu__weekends--day">
+                Вихідні:
+                <span class="menu__weekends--info">
+                  понеділок, вівторок
+                </span>
+              </p>
+              <p calss="menu__weekends--info">
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="events page__events" id="events">
+        <div class="events__content container">
+          <div class="events__header">
+            Актуальні події
+          </div>
+
+          <div class="events__blocks">
+            <div class="events__block">
+              <div class="events__picture">
+              </div>
+
+              <div class="events__description">
+                <p class="events__exhibition">
+                  виставка
+                </p>
+
+                <span class="events__schedule">
+                  26.08-29.11.2019
+                </span>
+
+                <p class="events__exhibition-name">
+                  Йду і повертаюсь
+                </p>
+
+                <p class="events__exhibition-description">
+                  Національний Художній Музей України презентує
+                  унікальну частину колекції Градобанку -
+                  українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="events__block">
+              <div class="events__picture events__picture--1">
+              </div>
+
+              <div class="events__description">
+                <p class="events__exhibition">
+                  виставка
+                </p>
+
+                <span class="events__schedule">
+                  26.08-29.11.2019
+                </span>
+
+                <p class="events__exhibition-name events__exhibition-name--1">
+                  І спогади і мрії
+                </p>
+
+                <p class="events__exhibition-description">
+                  Національний художній музей України до 100
+                  річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває
+                  ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__wide">
+          <div class="container">
+            <div class="events__description-wide">
+              <div class="events__wide-top">
+                <p class="events__exhibition-wide">
+                  ЛЕКЦІЯ
+                </p>
+
+                <span class="events__schedule-wide">
+                  26/08/2019 - 11:00
+                </span>
+              </div>
+
+              <p class="events__name-wide">
+                Від класицизму до романтизму
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery page__gallery" id="gallery">
+        <div class="gallery__content container">
+          <div class="gallery__header">
+            Галерея
+          </div>
+
+          <div class="gallery__items">
+            <div class="gallery__image gallery__image--1" id="image1">
+              <img
+                src="./images/galery1.jpg"
+                alt="ukrainian girl"
+                class="gallery__pattern"
+              >
+            </div>
+
+            <div class="gallery__image gallery__image--12" id="image2">
+              <img
+                src="./images/gallery-tablet.png"
+                alt="ukrainian girl"
+                class="gallery__pattern"
+              >
+            </div>
+
+            <div class="gallery__image gallery__image--2">
+              <img
+                src="./images/galery2.jpg"
+                alt="ukrainian girl"
+                class="gallery__pattern gallery__pattern--1"
+              >
+            </div>
+
+            <div class="gallery__image gallery__image--3" id="image3">
+              <img
+                src="./images/galery3.jpg"
+                alt="ukrainian girl"
+                class="gallery__pattern gallery__pattern--3"
+              >
+            </div>
+
+            <div class="gallery__image gallery__image--4" id="image4">
+              <img
+                src="./images/galery4.jpg"
+                alt="ukrainian girl"
+                class="gallery__pattern"
+              >
+            </div>
+          </div>
+        </div>
+
+        <ul class="gallery__scrollbar">
+          <li class="gallery__li">
+            <a href="#image1" class="gallery__scroll gallery__scroll--1">
+            </a>
+          </li>
+
+          <li class="gallery__li">
+            <a href="#image2" class="gallery__scroll">
+            </a>
+          </li>
+
+          <li class="gallery__li">
+            <a href="#image3" class="gallery__scroll">
+            </a>
+          </li>
+
+          <li class="gallery__li">
+            <a href="#image4" class="gallery__scroll">
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="page__subscribe subscribe">
+        <div class="subscribe__content">
+          <div class="subscribe__main">
+            <h1 class="subscribe__header">
+              Підписка
+            </h1>
+
+            <p class="subscribe__motto">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+            action="#"
+            id="form-reload"
+            method="post"
+            class="subscribe__form"
+            >
+              <input
+              name="email"
+              type="email"
+              placeholder="E-Mail"
+              class="form-field subscribe__field"
+              required
+              >
+
+              <button type="submit" class="subscribe__main-button">
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <section class="footer page__footer" id="contacts">
+      <div class="footer__content container">
+        <div class="footer__logo-block">
+          <div class="footer__logo-wrap">
+            <a
+            href="#"
+            class="footer__logo"
+            >
+              Na
+              <br>
+              mu
+            </a>
+          </div>
+
+          <div class="footer__social">
+            <a
+              href="https://www.facebook.com/"
+              class="footer__icon footer__icon--1"
+              target="_blank"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              class="footer__icon footer__icon--2"
+              target="_blank"
+            >
+            </a>
+          </div>
+        </div>
+        <div class="footer__schedule-wrap">
+          <div class="footer__schedule">
+            <div class="footer__weekdays">
+              <p class="footer__title">
+                Графік роботи
+              </p>
+              <p class="footer__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  середа
+                </span>
+              </p>
+              <p class="footer__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  четвер
+                </span>
+              </p>
+              <p class="footer__weekdays--time">
+                12:00 — 20:00
+                <span class= "menu__weekdays--day">
+                  п'ятниця
+                </span>
+              </p>
+              <p class="footer__weekdays--time">
+                11:00 — 19:00
+                <span class= "menu__weekdays--day">
+                  субота
+                </span>
+              </p>
+              <p class="footer__weekdays--time">
+                11:00 — 19:00
+                <span class= "menu__weekdays--day">
+                  неділя
+                </span>
+              </p>
+            </div>
+
+            <div class="footer__weekends">
+              <p class="footer__weekends--day">
+                Вихідні:
+                <span class="footer__weekends--info">
+                  понеділок, вівторок
+                </span>
+              </p>
+              <p calss="footer__weekends--info">
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__title">
+              Контакти
+            </p>
+
+            <div class="footer__links">
+              <a
+              href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4494308,30.5280756,17z/data=!3m1!4b1!4m20!1m13!4m12!1m4!2m2!1d-122.193594!2d47.4151737!4e1!1m6!1m2!1s0x40d4ce524453048d:0x549e3a34119f524f!2sNational+Art+Museum+of+Ukraine!2m2!1d30.5306505!2d50.4494274!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?entry=ttu"
+              class="footer__weekends--info footer__weekends"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <br>
+
+              <a href="tel:+380442781357" class="footer__weekends footer__weekends--info">
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <br>
+
+              <a href="fax:+380442787454" class="footer__weekends footer__weekends--info">
+                факс +38 (044) 278-74-54
+              </a>
+
+              <br>
+
+              <a href="mailto:info@namu.kiev.ua" class="footer__weekends footer__weekends--info">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__arrow">
+          <a href="#" class="footer__tohome"></a>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="footer__menu">
+          <li class="footer__list footer__list--1">
+            <ul class="footer__list-item">
+              <a href="#gallery" class="footer__weekends footer__weekends--info">
+                Галерея
+              </a>
+            </ul>
+            <ul class="footer__list-item">
+              <a href="#events" class="footer__weekends footer__weekends--info">
+                Виставки та події
+              </a>
+            </ul>
+          </li>
+
+          <li class="footer__list footer__list--2">
+            <ul class="footer__list-item">
+              <a href="#" class="footer__weekends footer__weekends--info">
+                Про нас
+              </a>
+            </ul>
+            <ul class="footer__list-item">
+              <a href="#contacts" class="footer__weekends footer__weekends--info">
+                Контакти
+              </a>
+            </ul>
+          </li>
+        </div>
+
+        <div class="footer__end">
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+
+          <p class="footer__copyright">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </div>
+    </div>
+    </section>
   </body>
 </html>
