hover was corrected

--- a/src/index.html
+++ b/src/index.html
@@ -422,26 +422,17 @@
             <div class="footer__links">
               <a
               href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4494308,30.5280756,17z/data=!3m1!4b1!4m20!1m13!4m12!1m4!2m2!1d-122.193594!2d47.4151737!4e1!1m6!1m2!1s0x40d4ce524453048d:0x549e3a34119f524f!2sNational+Art+Museum+of+Ukraine!2m2!1d30.5306505!2d50.4494274!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?entry=ttu"
-              class="footer__weekends--info footer__weekends"
+              class="footer__weekends--info footer__weekends footer__useful"
               >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
-
-              <br>
-
-              <a href="tel:+380442781357" class="footer__weekends footer__weekends--info">
+              <a href="tel:+380442781357" class="footer__weekends footer__weekends--info footer__useful">
                 тел. +38 (044) 278-13-57
               </a>
-
-              <br>
-
-              <a href="fax:+380442787454" class="footer__weekends footer__weekends--info">
+              <a href="fax:+380442787454" class="footer__weekends footer__weekends--info footer__useful">
                 факс +38 (044) 278-74-54
               </a>
-
-              <br>
-
-              <a href="mailto:info@namu.kiev.ua" class="footer__weekends footer__weekends--info">
+              <a href="mailto:info@namu.kiev.ua" class="footer__weekends footer__weekends--info footer__useful">
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
