--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,322 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    >
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+    >
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__content-left">
+          <a href="#">
+            <div class="menu__close"></div>
+          </a>
+          <nav class="menu__links">
+            <a class="menu__link" href="#gal">Галерея</a>
+            <a class="menu__link" href="#sub">Про Нас</a>
+            <a class="menu__link" href="#events">Виставки та події</a>
+            <a class="menu__link" href="#footer">Контакти</a>
+          </nav>
+        </div>
+        <div class="menu__content-right">
+          <div class="menu__worktime">
+            <h5 class="menu__title">Графік роботи</h5>
+
+            <p>
+              <strong class="menu__content-right-strong">12:00 — 20:00</strong> середа <br>
+              <strong class="menu__content-right-strong">12:00 — 20:00</strong>  четвер <br>
+              <strong class="menu__content-right-strong">12:00 — 20:00</strong> п’ятниця <br>
+              <strong class="menu__content-right-strong">11:00 — 19:00</strong> субота <br>
+              <strong class="menu__content-right-strong">11:00 — 19:00</strong> неділя <br>
+            </p>
+          </div>
+          <div class="menu__info">
+            <strong class="menu__content-right-strong">Вихідні:</strong> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </div>
+      </div>
+    </div>
+    <header class="header">
+      <div class="header__image">
+        <div class="header__logo">
+          <a href="#" class="logo"></a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <a class="header__menu" href="#menu"></a>
+          <h1 class="h1 header__title" id="top">Художній музей</h1>
+          <a class="header__button" href="#">
+            <div class="header__button-left">Квитки</div>
+            <div class="header__button-right"></div>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <section class="events" id="events">
+      <div class="container">
+        <h2 class="h2 events__main-title">Актуальні події</h2>
+        <div class="events__card">
+          <div class="events__image">
+            <img
+              class="events__img img_hover"
+              src="/images/events-1.jpg"
+              alt="Йду і повертаюсь"
+            >
+          </div>
+          <div class="events__content">
+            <div class="events__date-type">
+              <div class="events__type">Виставка</div>
+              <div class="events__date">26.08-29.11.2019</div>
+            </div>
+            <h3 class="h3 events__title">Йду і повертаюсь</h3>
+            <div class="events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>
+        </div>
+        <div class="events__card">
+          <div>
+            <img
+              class="events__img img_hover"
+              src="/images/events-2.jpg"
+              alt="І спогади і мрії"
+            >
+          </div>
+          <div class="events__content">
+            <div class="events__date-type">
+              <div class="events__type">Виставка</div>
+              <div class="events__date">26.08-29.11.2019</div>
+            </div>
+            <h3 class="h3 events__title">І спогади і мрії</h3>
+            <div class="events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="events__lecture">
+        <img
+          class="events__img events__img--height"
+          src="/images/events-3.jpg"
+          alt="Від класицизму до романтизму"
+        >
+        <div class="events__lecture-content">
+          <div class="events__date-type-lecture">
+            <div class="events__type">Лекція</div>
+            <div class="events__date">26/08/2019 - 11:00</div>
+          </div>
+          <h3 class="h3">Від класицизму до романтизму</h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="h2">Галерея</h2>
+        <div class="gallery__content">
+          <img
+            class="gallery__img img_hover"
+            src="images/m-gallery-1.jpg"
+            alt="Picture 1"
+          >
+          <img
+            class="gallery__img img_hover"
+            src="images/m-gallery-2.jpg"
+            alt="Picture 1"
+          >
+          <img
+            class="gallery__img img_hover"
+            src="images/m-gallery-2.jpg"
+            alt="Picture 1"
+          >
+        </div>
+        <div class="gallery__dots">
+          <div class="gallery__dot gallery__dot--active"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container">
+      <section class="gallery-d" id="gal">
+        <h2 class="h2">Галерея</h2>
+        <div class="gallery-d__img">
+          <img
+            class="gallery-d__1-img img_hover"
+            src="images/d-gallery-1.jpg"
+            alt="Picture 1"
+          >
+          <img
+            class="gallery-d__2-img img_hover"
+            src="images/d-gallery-2.jpg"
+            alt="Picture 2"
+          >
+          <img
+            class="gallery-d__3-img img_hover"
+            src="images/d-gallery-3.jpg"
+            alt="Picture 3"
+          >
+          <img
+            class="gallery-d__4-img img_hover"
+            src="images/d-gallery-4.jpg"
+            alt="Picture 4"
+          >
+        </div>
+      </section>
+    </div>
+
+    <section class="subscription" id="sub">
+      <div class="container">
+        <div class="subscription__content">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form class="subscription__input" action="#">
+            <label>
+              <input
+                class="subscription__input-left"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+            </label>
+            <button type="submit" class="subscription__input-right"></button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <div class="container">
+      <footer class="footer" id="footer">
+        <div class="footer__content">
+          <div class="footer__social">
+            <a href="#">
+              <div class="logo"></div>
+            </a>
+            <div class="footer__icons">
+              <a target="_blank" href="https://facebook.com">
+                <div class="footer__icons-facebook"></div>
+              </a>
+              <a target="_blank" href="https://instagram.com">
+                <div class="footer__icons-insta"></div>
+              </a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__text">
+              <div class="footer__worktime">
+                <h5 class="footer__title">Графік роботи</h5>
+
+                <p>
+                  <strong>12:00 — 20:00</strong> середа <br>
+                  <strong>12:00 — 20:00</strong>  четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя <br>
+                </p>
+
+                <p class="footer__text-info">
+                  Вихідні понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+              <div class="footer__contacts">
+                <h5 class="footer__title">Контакти:</h5>
+                <p>
+                  <a
+                    class="footer__link"
+                    target="_blank"
+                    href="https://goo.gl/maps/M3YjuFfACwnLoCn29"
+                  >
+                  вул. М. Грушевського, 6; Київ, 01001
+                  </a><br>
+                  <a class="footer__link" href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a><br>
+                  <a class="footer__link" href="tel: +38 (044) 278-74-54">факс +38 (044) 278-74-54</a><br>
+                  <a class="footer__link" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a><br>
+                </p>
+              </div>
+            </div>
+
+
+            <div class="footer__bottom">
+              <a class="footer__top-link" href="#top">
+                <div class="footer__go-to-the-top">
+                  <img src="/images/top.svg" alt="arrow">
+                </div>
+              </a>
+              <div class="footer__links">
+                <a class="footer__link" href="#gal">Галерея</a>
+                <a class="footer__link" href="#sub">Про Нас</a>
+                <a class="footer__link" href="#events">Виставки та події</a>
+                <a class="footer__link" href="#footer">Контакти</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <div class="footer__copyright-left">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+          <div class="footer__copyright-right">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </footer>
+    </div>
+
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script>
+      window.addEventListener('hashchange', () => {
+      if (window.location.hash === '#menu') {
+        document.body.classList.add('page__body--with-menu');
+      } else {
+        document.body.classList.remove('page__body--with-menu');
+      }
+      });
+    </script>
+    <script>
+      const form = document.querySelector('.subscription__input');
+      form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      form.reset();
+      });
+    </script>
   </body>
 </html>
