--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -207,7 +207,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
           <form class="subscription__input" action="#">
-            <label>
+            <label class="subscription__input-label">
               <input
                 class="subscription__input-left"
                 type="email"
