--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,8 @@
 
         <div class="aside__line"></div>
 
-        <div class="aside__bottom">
-          <p class="aside__text aside__head">Графік роботи</p>
-        </div>
-
         <div class="aside__graph">
+          <p class="aside__text aside__head">Графік роботи</p>
           <p class="aside__bold">12:00 — 20:00 <span class="aside__text">середа</span></p>
           <p class="aside__bold">12:00 — 20:00 <span class="aside__text">четвер</span></p>
           <p class="aside__bold">12:00 — 20:00 <span class="aside__text">п’ятниця</span></p>
@@ -81,17 +78,19 @@
           class="events__photo"
           alt="Йду і повертаюсь"
         >
-        <div class="events__container">
-          <p class="events__container__text">ВИСТАВКА</p>
-          <h4 class="events__container__date">26.08-29.11.2019</h4>
-        </div>
+        <div class="events__card__container">
+          <div class="events__container">
+            <p class="events__container__text">ВИСТАВКА</p>
+            <h4 class="events__container__date">26.08-29.11.2019</h4>
+          </div>
 
-        <div class="events__name">
-          <h3 class="events__title">Йду і повертаюсь</h3>
-          <div class="events__box"></div>
-        </div>
+          <div class="events__name">
+            <h3 class="events__title">Йду і повертаюсь</h3>
+            <div class="events__box"></div>
+          </div>
 
-        <p class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          <p class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+        </div>
       </div>
 
       <div class="events__card">
@@ -100,17 +99,19 @@
           class="events__photo"
           alt="І спогади і мрії"
         >
-        <div class="events__container">
-          <p class="events__container__text">ВИСТАВКА</p>
-          <h4 class="events__container__date">26.08-29.11.2019</h4>
-        </div>
+        <div class="events__card__container">
+          <div class="events__container">
+            <p class="events__container__text">ВИСТАВКА</p>
+            <h4 class="events__container__date">26.08-29.11.2019</h4>
+          </div>
 
-        <div class="events__name">
-          <h3 class="events__title">І спогади і мрії</h3>
-          <div class="events__box"></div>
-        </div>
+          <div class="events__name">
+            <h3 class="events__title">І спогади і мрії</h3>
+            <div class="events__box"></div>
+          </div>
 
-        <p class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          <p class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </div>
       </div>
     </section>
 
@@ -136,6 +137,24 @@
       <img
         class="galery__photo galery__photo__2"
         src="images/galery/second.png"
+        alt="Гуси"
+      >
+
+      <img
+        class="galery__photo galery__photo__3"
+        src="images/galery/third.png"
+        alt="Зимня хата"
+      >
+
+      <img
+        class="galery__photo galery__photo__4"
+        src="images/galery/four.png"
+        alt="Гуси"
+      >
+
+      <img
+        class="galery__photo galery__photo__5"
+        src="images/galery/five.png"
         alt="Гуси"
       >
 
@@ -202,7 +221,7 @@
           <p class="footer__bold">11:00 — 19:00 <span class="footer__text">субота</span></p>
           <p class="footer__bold">11:00 — 19:00 <span class="footer__text">неділя</span></p>
           <br>
-          <p class="footer__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+          <p class="footer__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br> до закриття музею</p>
         </div>
       </div>
 
