add fix to navigation

--- a/src/index.html
+++ b/src/index.html
@@ -41,14 +41,14 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a class="nav__link" href="#Galery">Галерея</a>
-                <a class="nav__link" href="#">Виставки та події</a>
+                <a class="nav__link" href="#galery">Галерея</a>
+                <a class="nav__link" href="#events">Виставки та події</a>
               </li>
             </ul>
             <ul class="nav__list">
               <li class="nav__item">
-                <a class="nav__link" href="#">Про Нас</a>
-                <a class="nav__link" href="#">Контакти</a>
+                <a class="nav__link" href="#subscribe">Про Нас</a>
+                <a class="nav__link" href="#footer">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -187,12 +187,13 @@
               class="subscribe__email"
               required
               form="myForm"
+              autocomplete="off"
             >
-          </form>
 
-          <button class="subscribe__button" type="submit">
-            <a href="#" class="subscribe__button__icon"></a>
-          </button>
+            <button class="subscribe__button" type="submit" >
+              <a href="#" class="subscribe__button__icon"></a>
+            </button>
+          </form>
         </div>
       </div>
     </section>
@@ -229,10 +230,34 @@
         <p class="footer__text">Контакти:</p>
 
         <div class="footer__contacts__container">
-          <a href="#" class="footer__contacts__link">вул. М. Грушевського, 6;</a>
-          <a href="#" class="footer__contacts__link">тел. +38 (044) 278-13-57</a>
-          <a href="#" class="footer__contacts__link">факс +38 (044) 278-74-54</a>
-          <a href="#" class="footer__contacts__link">e-mail: info@namu.kiev.ua</a>
+          <a
+          href="https://maps.app.goo.gl/7jSzUiNVRURDSZxM8"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            вул. М. Грушевського, 6;
+          </a>
+          <a
+          href="tel:+380442781357"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <a
+          href="#"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <a
+          href="mailto:info@namu.kiev.ua"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
         </div>
       </div>
 
@@ -247,14 +272,14 @@
       <nav class="footer__nav">
         <ul class="footer__nav__list">
           <li class="footer__nav__item">
-            <a class="footer__nav__link" href="#">Галерея</a>
-            <a class="footer__nav__link" href="#">Виставки та події</a>
+            <a class="footer__nav__link" href="#galery">Галерея</a>
+            <a class="footer__nav__link" href="#events">Виставки та події</a>
           </li>
         </ul>
         <ul class="footer__nav__list">
           <li class="footer__nav__item">
-            <a class="footer__nav__link" href="#">Про Нас</a>
-            <a class="footer__nav__link" href="#">Контакти</a>
+            <a class="footer__nav__link" href="#subscribe">Про Нас</a>
+            <a class="footer__nav__link" href="#footer">Контакти</a>
           </li>
         </ul>
       </nav>
