--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="images/footer/namu.svg">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Title</title>
+    <title>NAMU Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -28,8 +29,12 @@
               <a href="#" class="header__button__arrow"></a>
             </button>
           </div>
+
+          <div class="header__bottom__box">
+            <p class="header__bottom__text">Події</p>
+            <div class="header__bottom__line"></div>
+          </div>
         </div>
-        <h2 class="header__second__title">Актуальні події</h2>
       </div>
     </header>
 
@@ -72,6 +77,7 @@
     </aside>
 
     <section id="events" class="events">
+      <h2 class="events__second__title">Актуальні події</h2>
       <div class="events__card">
         <img
           src="images/events/first.png"
@@ -191,7 +197,7 @@
             >
 
             <button class="subscribe__button" type="submit" >
-              <a href="#" class="subscribe__button__icon"></a>
+              <div class="subscribe__button__icon"></div>
             </button>
           </form>
         </div>
@@ -207,8 +213,16 @@
         >
 
         <div class="footer__container">
-          <a href="#" class="footer__icon footer__icon__facebook"></a>
-          <a href="#" class="footer__icon footer__icon__instagram"></a>
+          <a
+            target="_blank"
+            href="https://www.facebook.com/"
+            class="footer__icon footer__icon__facebook">
+          </a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="footer__icon footer__icon__instagram"
+          ></a>
         </div>
       </div>
 
@@ -236,6 +250,13 @@
           target="_blank"
           >
             вул. М. Грушевського, 6;
+          </a>
+          <a
+          href="#"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            Київ, 01001<br>
           </a>
           <a
           href="tel:+380442781357"
