Changes were made

--- a/src/index.html
+++ b/src/index.html
@@ -237,29 +237,33 @@
           </h2>
 
           <div class="gallery">
-            <img
-            src="./images/Gallery-1.jpg"
-            alt="Gallery-1"
-            class="gallery__painting--1"
-            >
+            <div class="gallery__container--1">
+              <img
+                src="./images/Gallery-1.jpg"
+                alt="Gallery-1"
+                class="gallery__painting--1"
+              >
 
-            <img
-            src="./images/Gallery-2.jpg"
-            alt="Gallery-2"
-            class="gallery__painting--2"
-            >
+              <img
+                src="./images/Gallery-2.jpg"
+                alt="Gallery-2"
+                class="gallery__painting--2"
+              >
+            </div>
 
-            <img
-            src="./images/Gallery-3.jpg"
-            alt="Gallery-3"
-            class="gallery__painting--3"
-            >
+            <div class="gallery__container--2">
+              <img
+                src="./images/Gallery-3.jpg"
+                alt="Gallery-3"
+                class="gallery__painting--3"
+              >
 
-            <img
-            src="./images/Gallery-4.jpg"
-            alt="Gallery-4"
-            class="gallery__painting--4"
-            >
+              <img
+                src="./images/Gallery-4.jpg"
+                alt="Gallery-4"
+                class="gallery__painting--4"
+              >
+            </div>
           </div>
 
           <div class="swiper">
