--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,12 @@
           <div class="header__button__container">
             <button class="header__button">Квитки</button>
             <button class="header__button__second">
-              <a href="#" class="header__button__arrow"></a>
+              <span href="#" class="header__button__arrow"></span>
             </button>
           </div>
 
           <div class="header__bottom__box">
-            <p class="header__bottom__text">Події</p>
+            <a href="#events" class="header__bottom__text">Події</a>
             <div class="header__bottom__line"></div>
           </div>
         </div>
@@ -39,39 +39,41 @@
     </header>
 
     <aside class="page__menu aside" id="menu">
-      <div class="aside__container">
-        <div class="aside__top">
-          <a href="#" class="aside__close"></a>
+      <div class="aside__box">
+        <div class="aside__container">
+          <div class="aside__top">
+            <a href="#" class="aside__close"></a>
 
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="#galery">Галерея</a>
-                <a class="nav__link" href="#events">Виставки та події</a>
-              </li>
-            </ul>
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="#subscribe">Про Нас</a>
-                <a class="nav__link" href="#footer">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#galery">Галерея</a>
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#subscribe">Про Нас</a>
+                  <a class="nav__link" href="#footer">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-        <div class="aside__line"></div>
+          <div class="aside__line"></div>
 
-        <div class="aside__graph">
-          <p class="aside__text aside__head">Графік роботи</p>
-          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">середа</span></p>
-          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">четвер</span></p>
-          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">п’ятниця</span></p>
-          <p class="aside__bold">12:00 — 19:00 <span class="aside__text">субота</span></p>
-          <p class="aside__bold">12:00 — 19:00 <span class="aside__text">неділя</span></p>
-        </div>
+          <div class="aside__graph">
+            <p class="aside__text aside__head">Графік роботи</p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">середа</span></p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">четвер</span></p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">п’ятниця</span></p>
+            <p class="aside__bold">12:00 — 19:00 <span class="aside__text">субота</span></p>
+            <p class="aside__bold">12:00 — 19:00 <span class="aside__text">неділя</span></p>
+          </div>
 
-        <div class="aside__last">
-          <p class="aside__bold">Вихідні: <span class="aside__text">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+          <div class="aside__last">
+            <p class="aside__bold">Вихідні: <span class="aside__text">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+          </div>
         </div>
       </div>
     </aside>
@@ -197,7 +199,7 @@
             >
 
             <button class="subscribe__button" type="submit" >
-              <div class="subscribe__button__icon"></div>
+              <span class="subscribe__button__icon"></span>
             </button>
           </form>
         </div>
@@ -284,7 +286,7 @@
 
       <div class="footer__button__container">
         <button class="footer__button">
-          <a href="#" class="footer__button__icon"></a>
+          <span href="#" class="footer__button__icon"></span>
         </button>
       </div>
 
