add fix to button

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <div class="header__button__container">
             <button class="header__button">Квитки</button>
             <button class="header__button__second">
-              <span href="#" class="header__button__arrow"></span>
+              <span class="header__button__arrow"></span>
             </button>
           </div>
 
@@ -286,7 +286,7 @@
 
       <div class="footer__button__container">
         <button class="footer__button">
-          <span href="#" class="footer__button__icon"></span>
+          <span class="footer__button__icon"></span>
         </button>
       </div>
 
