add fix to button

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header" id="top">
       <div class="header__container">
         <div class="top-bar">
           <div class="top-bar__container">
@@ -285,9 +285,9 @@
       </div>
 
       <div class="footer__button__container">
-        <button class="footer__button">
-          <span class="footer__button__icon"></span>
-        </button>
+        <div class="footer__button">
+          <a href="#" class="footer__button__icon"></a>
+        </div>
       </div>
 
       <div class="footer__line"></div>
