--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum | Home Page</title>
+    <link rel="stylesheet" href="./styles/app.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="home-page">
+    <!-- loader -->
+    <div class="loader"></div>
+
+    <!-- header -->
+    <header class="header"></header>
+
+    <!-- main -->
+    <main>
+      <section class="section">
+        <div class="section__container"></div>
+      </section>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer"></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
