--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,290 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Museum</title>
+    <link rel="shortcut icon" href="./images/icons/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+  >
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__content">
+          <a href="#menu" class="icon icon--menu icon--menu--tablet"></a>
+
+          <h1 class="header__title">Художній Музей</h1>
+
+          <div class="header__tickets">
+            <a href="#events" class="header__link-tickets">Квитки</a>
+
+            <a href="#events" class="square-button square-button--tickets">
+              <span class="icon icon--right-arrow"></span>
+            </a>
+          </div>
+
+          <a href="#events" class="header__link-events">Події</a>
+        </div>
+
+        <div class="header__image">
+          <a href="#" class="header__logo">
+            <span>NA</span>
+            <span>MU</span>
+          </a>
+          <a href="#menu" class="icon icon--menu icon--menu--mobile"></a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__nav">
+          <a href="#" class="icon icon--close"></a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#about-us">Про нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="menu__line"></div>
+        <div class="menu__schedule schedule">
+          <div class="schedule__container">
+            <h5 class="schedule__title">Графік роботи</h5>
+            <ul class="schedule__work-time">
+              <li class="schedule__hour-day"> <span class="schedule__bold">12:00 – 20:00</span>
+                <span class="schedule__normal">середа</span>
+              </li>
+              <li class="schedule__hour-day"> <span class="schedule__bold">12:00 – 20:00</span>
+                <span class="schedule__normal">четвер</span>
+              </li>
+              <li class="schedule__hour-day"> <span class="schedule__bold">12:00 – 20:00</span>
+                <span class="schedule__normal">п'ятниця</span>
+              </li>
+              <li class="schedule__hour-day"> <span class="schedule__bold">11:00 – 19:00</span>
+                <span class="schedule__normal">субота</span>
+              </li>
+              <li class="schedule__hour-day"> <span class="schedule__bold">11:00 – 19:00</span>
+                <span class="schedule__normal">неділя</span>
+              </li>
+            </ul>
+          </div>
+          <p class="schedule__weekdays">
+            <span class="schedule__bold">Вихідні:</span>
+            <span class="schedule__normal">понеділок, вівторок</span>
+            <br>
+            <span class="schedule__normal">Каса припиняє роботу за 1 годину до закриття музею</span>
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="events" id="events">
+        <div class="events__container">
+          <h2 class="events__header">
+            Актуальні події
+          </h2>
+          <article class="events__exhibition exhibition">
+            <img src="./images/exhibition1.jpg" alt="exhibition1" class="exhibition__image">
+            <div class="exhibition__content">
+              <div class="exhibition__schedule">
+                <span class="exhibition__subtitle">Виставка</span>
+                <span class="exhibition__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="exhibition__title">Йду і повертаюсь</h3>
+              <p class="exhibition__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+          <article class="events__exhibition exhibition">
+            <img src="./images//exhibition2.jpg" alt="exhibition2" class="exhibition__image">
+            <div class="exhibition__content">
+              <div class="exhibition__schedule">
+                <span class="exhibition__subtitle">Виставка</span>
+                <span class="exhibition__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="exhibition__title">І спогади і мрії</h3>
+              <p class="exhibition__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+        <div class="events__lecture lecture">
+          <img src="./images/lection-background.jpg" alt="lection" class="lecture__image">
+          <div class="lecture__content">
+            <div class="lecture__schedule">
+              <span class="lecture__subtitle">Лекція</span>
+              <span class="lecture__date">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <h1 class="gallery__title">Галерея</h1>
+        <div class="gallery__slides swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide gallery__slide--first">
+              <img src="./images/gallery1.jpg" class="gallery__image" alt="Slide 1">
+            </div>
+            <div class="swiper-slide gallery__slide--second">
+              <img src="./images/gallery2.jpg" class="gallery__image" alt="Slide 2">
+            </div>
+            <div class="swiper-slide gallery__slide--third">
+              <img src="./images/gallery3.jpg" class="gallery__image" alt="Slide 3">
+            </div>
+            <div class="swiper-slide gallery__slide--fourth">
+              <img src="./images/gallery4.jpg" class="gallery__image" alt="Slide 4">
+            </div>
+          </div>
+          <div class="custom-pagination">
+            <div class="custom-pagination-item"></div>
+            <div class="custom-pagination-item"></div>
+            <div class="custom-pagination-item"></div>
+            <div class="custom-pagination-item"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="about-us">
+        <div class="subscription__container">
+          <h1 class="subscription__title">Підписка</h1>
+          <p class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form class="subscription__email" onsubmit="this.reset(); return false;">
+            <label for="email"></label>
+            <input
+              type="email"
+              class="subscription__input"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="square-button square-button--subscription">
+              <span class="icon icon--right-arrow"></span>
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__container">
+        <div class="footer__top">
+          <a href="#" class="footer__logo">
+            <span>NA</span>
+            <span>MU</span>
+          </a>
+          <div class="footer__icons">
+            <a href="https://www.facebook.com/namu.museum/" class="icon icon--facebook" target="_blank"></a>
+            <a href="https://www.instagram.com/namu.museum/" class="icon icon--instagram" target="_blank"></a>
+          </div>
+        </div>
+        <div class="footer__content">
+          <div class="footer__schedule schedule">
+            <div class="schedule__container">
+              <h5 class="schedule__title">Графік роботи</h5>
+              <ul class="footer__work schedule__work-time">
+                <li class="schedule__hour-day">
+                  <span class="schedule__bold">12:00 – 20:00</span>
+                  <span class="schedule__normal">середа</span>
+                </li>
+                <li class="schedule__hour-day">
+                  <span class="schedule__bold">12:00 – 20:00</span>
+                  <span class="schedule__normal">четвер</span>
+                </li>
+                <li class="schedule__hour-day">
+                  <span class="schedule__bold">12:00 – 20:00</span>
+                  <span class="schedule__normal">п'ятниця</span>
+                </li>
+                <li class="schedule__hour-day">
+                  <span class="schedule__bold">11:00 – 19:00</span>
+                  <span class="schedule__normal">субота</span>
+                </li>
+                <li class="schedule__hour-day">
+                  <span class="schedule__bold">11:00 – 19:00</span>
+                  <span class="schedule__normal">неділя</span>
+                </li>
+              </ul>
+            </div>
+            <p class="schedule__weekdays">
+              <span class="schedule__bold">Вихідні:</span>
+              <span class="schedule__normal">понеділок, вівторок</span>
+              <br>
+              <span class="schedule__normal">Каса припиняє роботу за 1 годину до закриття музею</span>
+            </p>
+          </div>
+          <div class="footer__contacts contacts">
+            <h5 class="contacts__title">Контакти:</h5>
+            <div class="contacts__content">
+              <a
+                href="https://www.google.com/maps?q=вул. М. Грушевського, 6; Київ, 01001"
+                class="contacts__address text-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-13-57" class="contacts__tel text-link">тел. +38 (044) 278-13-57</a>
+              <br>
+              <a href="tel:+38 (044) 278-74-54" class="contacts__fax text-link"> факс +38 (044) 278-74-54</a>
+              <br>
+              <a href="mailto:info@namu.kiev.ua" class="contacts__email text-link"> e-mail: info@namu.kiev.ua</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__line"></div>
+        <div class="footer__links">
+          <nav class="nav">
+            <ul class="footer__list nav__list">
+              <li class="nav__item">
+                <a class="footer__link nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="footer__link nav__link" href="#about-us">Про нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="footer__link nav__link" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="footer__link nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__copyrights">
+          <p class="footer__author">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+      <a href="#" class="footer__go-up">&#8593;</a>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script type="module" src="scripts/main.js"></script>
+
   </body>
 </html>
