--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,52 @@
 
     <!-- main -->
     <main>
-      <section class="section">
-        <div class="section__container"></div>
+
+      <!-- ui -->
+      <section class="section ui">
+        <div class="section__container">
+          <div class="ui__block">
+            <h1 class="h1">Художній музуй</h1>
+            <h2 class="h2">Художній музуй</h2>
+            <h3 class="h3">Художній музуй</h3>
+            <div class="text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+            <div class="text text--size-2">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+            <div class="text text--size-3">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+            <div class="text text--size-4">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+            <a href="index.html" class="btn">
+              <p class="btn__text">Квитки</p>
+              <span class="btn__arrow"></span>
+            </a>
+            <form class="form">
+              <input
+                class="form__input"
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                required
+              >
+              <button class="form__submit" type="submit"></button>
+            </form>
+          </div>
+        </div>
       </section>
+
     </main>
 
     <!-- footer -->
