--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,43 @@
     <!-- main -->
     <main>
 
+      <!-- banner -->
+      <section class="section banner">
+        <div class="banner__imgs">
+          <picture>
+            <img
+              class="banner__img"
+              src="img/banner.jpg"
+              loading="lazy"
+              alt="banner__img"
+            >
+          </picture>
+        </div>
+
+        <div class="section__container">
+          <div class="banner__block">
+            <div class="banner__cont">
+              <h1 class="h1 banner__title">Художній музей</h1>
+              <a href="index.html" class="btn banner__btn">
+                <p class="btn__text">Квитки</p>
+                <span class="btn__arrow"></span>
+              </a>
+            </div>
+
+            <a href="#events" class="banner__anchor">Події</a>
+          </div>
+        </div>
+      </section>
+
       <!-- ui -->
       <section class="section ui">
         <div class="section__container">
           <div class="ui__block">
-            <h1 class="h1">Художній музуй</h1>
-            <h2 class="h2">Художній музуй</h2>
-            <h3 class="h3">Художній музуй</h3>
+            <h1 class="h1">Художній музей</h1>
+            <h2 class="h2">Художній музей</h2>
+            <h3 class="h3">Художній музей</h3>
+
+
             <div class="text">
               Національний художній музей України до 100 річчя від дня
               народження видатної української художниці Тетяни Яблонської
@@ -43,10 +73,14 @@
               народження видатної української художниці Тетяни Яблонської
               відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </div>
+
+
             <a href="index.html" class="btn">
               <p class="btn__text">Квитки</p>
               <span class="btn__arrow"></span>
             </a>
+
+
             <form class="form">
               <input
                 class="form__input"
