add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -284,9 +284,8 @@
           <p class="subscription__title">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
           <form 
-            action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
-            class="subscription__bottom" 
-            method="post"
+            action="#"
+            class="subscription__bottom"
             onsubmit="this.reset();"
           >
             <input
@@ -294,6 +293,7 @@
               name="email"
               placeholder="E-mail"
               class="subscription__email"
+              autocomplete="off"
               required
             >
 
