--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__info">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a href="#" class="button button--tickets">
+              <button class="button__title">КВИТКИ</button>
+              <div class="button__arrow"></div>
+            </a>
+            <div class="header__events">
+              <a href="#events" class="header__events-link">ПОДІЇ</a>
+              <div class="header__events-line"></div>
+            </div>
+          </div>
+          <div class="header__photo">
+            <p class="header__logo">NA<br>MU</p>
+          </div>
+          <a href="#menu" class="icon icon--menu"></a>
+
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="container">
+        <div class="menu__nav"></div>
+        <div class="menu__schedule"></div>
+      </div>
+    </aside>
+
+    <main>
+      <div class="container">
+        <section class="events" id="events">
+          <h2 class="section__title">Актуальні події</h2>
+          <div class="section__content">
+            <article></article>
+            <article></article>
+            <article></article>
+          </div>
+        </section>
+
+        <section class="gallery">
+          <h2 class="section__title">Галерея</h2>
+          <div class="section__content">
+          </div>
+        </section>
+
+        <section class="follow">
+          <h2 class="section__title">Підписка</h2>
+          <div class="section__content">
+          </div>
+        </section>
+
+        <section class="contacts">
+          <div class="section__content">
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
