add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMU Museum</title>
+    <title>National Art Museum of Ukraine</title>
+    <link rel="icon" href="./images/namu_logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/namu_logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -12,6 +14,7 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js"></script>
   </head>
   <!-- #endregion -->
   <body class="page__body page__body--with-menu">
@@ -45,7 +48,7 @@
       </div>
     </header>
 
-    <aside class="menu page__menu" id="menu">
+    <aside class="menu page__menu page__menu--active" id="menu">
       <div class="menu__top">
         <div class="menu__icon">
           <a href="#" class="icon icon--close"></a>
@@ -284,7 +287,7 @@
           <p class="subscription__title">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
           <form 
-            action="#"
+            action="javascript:void(0);"
             class="subscription__bottom"
             onsubmit="this.reset();"
           >
@@ -297,7 +300,12 @@
               required
             >
 
-            <button type="submit" class="subscription__button"></button>
+            <input 
+              type="submit"
+              value=""
+              class="subscription__button"
+              onclick="submitForm()"
+            >
           </form>
         </div>
       </section>
@@ -342,12 +350,26 @@
               закриття музею
             </p>
     
-            <p class="footer__main--content2">
+            <div class="footer__main--content2">
               Контакти: <br>
               <br>
-              вул. М. Грушевського, 6; Київ, 01001тел. +38 (044) 278-13-57факс +38
-              (044) 278-74-54e-mail: info@namu.kiev.ua
-            </p>
+              <a 
+                href="https://www.google.com/maps/place/Національний+художній+музей+України/@50.4494274,30.5280756,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?entry=ttu"
+                class="footer__main--content2-link"
+              >
+                вул. М. Грушевського, 6; Київ,
+              </a>
+
+              01001тел. +38 (044) 278-13-57факс +38
+              (044) 278-74-54 <br>
+
+              <a 
+                href="mailto:info@namu.kiev.ua"
+                class="footer__main--content2-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
 
           <!-- 2 -->
