--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,16 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National Art Museum of Ukraine</title>
-    <link rel="icon" href="./images/namu_logo.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./images/namu_logo.png" type="image/x-icon">
+    <link 
+      rel="icon" 
+      href="./images/namu_logo.png" 
+      type="image/x-icon"
+    >
+    <link 
+      rel="shortcut icon" 
+      href="./images/namu_logo.png" 
+      type="image/x-icon"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -14,10 +22,10 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="./styles/main.scss">
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/main.js" defer></script>
   </head>
   <!-- #endregion -->
-  <body class="page__body page__body--with-menu">
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
     <!-- #region header -->
     <div class="page__mask"></div>
@@ -302,7 +310,7 @@
 
             <input 
               type="submit"
-              value=""
+              value=" "
               class="subscription__button"
               onclick="submitForm()"
             >
@@ -357,11 +365,11 @@
                 href="https://www.google.com/maps/place/Національний+художній+музей+України/@50.4494274,30.5280756,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?entry=ttu"
                 class="footer__main--content2-link"
               >
-                вул. М. Грушевського, 6; Київ,
+                вул. М. Грушевського, 6; Київ, 01001<br>
               </a>
 
-              01001тел. +38 (044) 278-13-57факс +38
-              (044) 278-74-54 <br>
+              <a href="tel:+380442781357" class="footer__main--content2-link">тел. +38 (044) 278-13-57</a> <br>
+              <a href="tel:+380442787454" class="footer__main--content2-link">факс +38 (044) 278-74-54</a> <br>
 
               <a 
                 href="mailto:info@namu.kiev.ua"
